--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -1,9 +1,9 @@
-name: sample-vuejs
+name: minecraft-website
 services:
 - build_command: yarn build
   environment_slug: node-js
   github:
     branch: main
     deploy_on_push: true
-    repo: digitalocean/sample-vuejs
-  name: sample-vuejs
+    repo: Benwyw/minecraft-website
+  name: minecraft-website
